--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 html, body, #root {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   min-width: 320px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -18,6 +18,9 @@ html, body, #root {
 
 html {
   background-color: #101010;
+}
+body::-webkit-scrollbar {
+  display: none;
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
